feat: 添加播放控制

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>林燕京，情人节快乐</title>
-  <embed src="./asserts/music/music1.mp3" hidden="true" autostart="true" loop="true">
   <style>
     * {
       margin: 0;
@@ -73,7 +72,7 @@
 <body>
   <div class="box"></div>
   <p>you are the only the here</p>
-  <audio src="./asserts/music/music1.mp3" autoplay="autoplay" loop="loop"></audio>
+  <audio src="./asserts/music/music1.mp3" autoplay="autoplay" loop="loop" controls></audio>
 </body>
 
 </html>
